--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -21,6 +21,7 @@ env:
   SAMPLE_DATABASE: "WideWorldImporters"
   SP_DOC_FILE: "WideWorldImporters.md"
   SQLINSTANCE: "localhost"
+  DATABASE: "master"
 
 jobs:
   bundle:
@@ -52,17 +53,23 @@ jobs:
           commit_message: Updated bundled installer
           file_pattern: "*.sql"
 
+      - name: Install multitool
+        run: |
+          foreach ($script in (Get-ChildItem -Path "." -Filter "sp_*.sql").Name) {
+            Invoke-DbaQuery -SqlInstance $Env:SQLINSTANCE -Database $Env:DATABASE -File $script
+          }
+
       - name: Create sp_doc sample artifact
         shell: pwsh
         run: |
           Write-Output "Downloading $Env:SAMPLE_DATABASE."
           $BackupPath = Join-Path -Path $Env:RUNNER_TEMP -ChildPath "$Env:SAMPLE_DATABASE.bak"
           Invoke-WebRequest -Uri "https://github.com/Microsoft/sql-server-samples/releases/download/wide-world-importers-v1.0/WideWorldImporters-Full.bak" -OutFile $BackupPath
-          $null = Restore-DbaDatabase -SqlInstance $Env:SQLINSTANCE -DatabaseName $Env:SAMPLE_DATABASE -Path $BackupPath -WithReplace
+          $null = Restore-DbaDatabase -SqlInstance $Env:SQLINSTANCE -DatabaseName $Env:SAMPLE_DATABASE -Path $BackupPath -WithReplace -EnableException
 
           Write-Output "Generating $Env:SAMPLE_DATABASE markdown sample."
           $Query = "EXEC sp_doc @DatabaseName = '$Env:SAMPLE_DATABASE';"
-          Invoke-DbaQuery -SqlInstance $Env:SQLINSTANCE -Database $Env:Database -Query $Query -As SingleValue | Out-File $Env:SP_DOC_FILE
+          Invoke-DbaQuery -SqlInstance $Env:SQLINSTANCE -Database $Env:Database -Query $Query -As SingleValue -EnableException| Out-File $Env:SP_DOC_FILE
 
       - name: Upload sp_doc sample artifact
         uses: actions/upload-artifact@v3
