--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -27,6 +27,14 @@ jobs:
   bundle:
     runs-on: ubuntu-latest
     name: Create bundled installer script
+    services:
+      sqlserver:
+        image: mcr.microsoft.com/mssql/server:2019-latest
+        ports:
+          - 1433:1433
+        env:
+          ACCEPT_EULA: "Y"
+          SA_PASSWORD: "L0wlydb4"
     defaults:
       run:
         shell: pwsh
@@ -44,12 +52,12 @@ jobs:
           modules-to-cache: dbatools
           shell: pwsh
 
-      - name: Create installer script
+      - name: Create bundled installer script
         run: |
           Get-ChildItem -Path $Env:GITHUB_WORKSPACE -Filter "sp_*.sql" | Get-Content | Out-File $Env:INSTALLER_FILE -Encoding ascii
           Get-ChildItem -Path $Env:GITHUB_WORKSPACE -Filter $Env:INSTALLER_FILE
 
-      - name: Commit bundled installer
+      - name: Commit bundled installer script
         uses: stefanzweifel/git-auto-commit-action@v4.14.1
         with:
           commit_message: Updated bundled installer
@@ -58,10 +66,10 @@ jobs:
       - name: Install multitool
         run: |
           foreach ($script in (Get-ChildItem -Path "." -Filter "sp_*.sql").Name) {
-            Invoke-DbaQuery -SqlInstance $Env:SQLINSTANCE -Database $Env:DATABASE -File $script
+            Invoke-DbaQuery -SqlInstance $Env:SQLINSTANCE -Database $Env:DATABASE -File $script -EnableException
           }
 
-      - name: Create sp_doc sample artifact
+      - name: Install WideWorldImports database
         run: |
           Write-Output "Downloading '$Env:SAMPLE_DATABASE' database."
           $BackupPath = Join-Path -Path $Env:RUNNER_TEMP -ChildPath "$Env:SAMPLE_DATABASE.bak"
@@ -69,7 +77,9 @@ jobs:
           Write-Output "Restoring '$Env:SAMPLE_DATABASE' database."
           $null = Restore-DbaDatabase -SqlInstance $Env:SQLINSTANCE -DatabaseName $Env:DATABASE -Path $BackupPath -WithReplace -EnableException
 
-          Write-Output "Generating $Env:SAMPLE_DATABASE markdown sample."
+      - name: Generate sp_doc sample
+        run: |
+          Write-Output "Generating '$Env:SAMPLE_DATABASE' markdown sample."
           $Query = "EXEC sp_doc @DatabaseName = '$Env:SAMPLE_DATABASE';"
           Invoke-DbaQuery -SqlInstance $Env:SQLINSTANCE -Database $Env:DATABASE -Query $Query -As SingleValue -EnableException | Out-File $Env:SP_DOC_FILE
 
