--- a/.github/workflows/sqlserver-unit.yml
+++ b/.github/workflows/sqlserver-unit.yml
@@ -50,6 +50,15 @@ jobs:
           ref: ${{ github.head_ref }}
 
       - name: Install SQL Server
+        continue-on-error: true
+        id: mssqlsuite
+        uses: potatoqualitee/mssqlsuite@v1.4
+        with:
+          install: sqlengine
+          sa-password: L0wlydb4
+
+      - name: Retry SQL Server install
+        if: steps.mssqlsuite.outcome == 'failure'
         uses: potatoqualitee/mssqlsuite@v1.4
         with:
           install: sqlengine
