--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -84,7 +84,7 @@ jobs:
           Write-Output "Restoring '$Env:SAMPLE_DATABASE' database."
           $SecPass = ConvertTo-SecureString -String $Env:SA_PASSWORD -AsPlainText -Force
           $sqlCredential = New-Object -TypeName System.Management.Automation.PSCredential -ArgumentList $Env:USER, $SecPass
-          $restoreQuery = "RESTORE DATABASE [$Env:SAMPLE_DATABASE] FROM DISK = '$BackupPath' RECOVERY;"
+          $restoreQuery = "RESTORE DATABASE [$Env:SAMPLE_DATABASE] FROM DISK = '$BackupPath' WITH RECOVERY;"
           Invoke-DbaQuery -SqlInstance $Env:SQLINSTANCE -SqlCredential $sqlCredential -Query $restoreQuery -Verbose
           #$null = Restore-DbaDatabase -SqlInstance $Env:SQLINSTANCE -SqlCredential $sqlCredential -DatabaseName $Env:DATABASE -Path $BackupPath -WithReplace -EnableException -Verbose
 
