--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -76,11 +76,11 @@ jobs:
 
       - name: Install WideWorldImporters database
         run: |
-          chmod 777 $Env:RUNNER_TEMP
           $BackupPath = Join-Path -Path $Env:RUNNER_TEMP -ChildPath "$Env:SAMPLE_DATABASE-Full.bak"
           Write-Output "Downloading '$Env:SAMPLE_DATABASE' to $BackupPath"
           $Uri = "https://github.com/Microsoft/sql-server-samples/releases/download/wide-world-importers-v1.0/WideWorldImporters-Full.bak"
           Invoke-WebRequest -Uri $Uri -OutFile $BackupPath
+          chmod 777 $BackupPath
           Get-ChildItem -Path $Env:RUNNER_TEMP -Filter "$Env:SAMPLE_DATABASE*"
           Write-Output "Restoring '$Env:SAMPLE_DATABASE' database."
           $SecPass = ConvertTo-SecureString -String $Env:SA_PASSWORD -AsPlainText -Force
