this seems likely to work

--- a/.github/workflows/sqlserver-unit.yml
+++ b/.github/workflows/sqlserver-unit.yml
@@ -30,6 +30,7 @@ env:
   COVERAGE_HTML_FILE: "coverage.html"
   COBERTURA_FILE: "cobertura.xml"
   SAMPLE_DATABASE: "WideWorldImporters"
+  SQL_VERSION: ${{ matrix.sql_server }}
 
 jobs:
   integration:
@@ -109,13 +110,13 @@ jobs:
         run: |
           Write-Output "Generating '$Env:SAMPLE_DATABASE' markdown sample."
           $Query = "EXEC sp_doc @DatabaseName = '$Env:SAMPLE_DATABASE';"
-          Invoke-DbaQuery -SqlInstance $Env:SQLINSTANCE -Database $Env:DATABASE -Query $Query -As SingleValue -EnableException | Out-File "$Env:SAMPLE-DATABASE-${{ matrix.sql_server}}.md"
+          Invoke-DbaQuery -SqlInstance $Env:SQLINSTANCE -Database $Env:DATABASE -Query $Query -As SingleValue -EnableException | Out-File "$Env:SAMPLE-DATABASE-$Env:SQL_VERSION.md"
 
       - name: Upload sp_doc sample artifact
         uses: actions/upload-artifact@v3
         with:
           name: sp_doc-sample
-          path: "${{ env.SAMPLE_DATABASE }}-${{ matrix.sql_server}}.md"
+          path: "${{ env.SAMPLE_DATABASE }}-${{ env.SQL_VERSION}}.md"
 
       - name: Upload HTML coverage artifact
         uses: actions/upload-artifact@v3
