Tweak more github CI setup (#235)

--- a/.github/actions/sqlcover/action.yml
+++ b/.github/actions/sqlcover/action.yml
@@ -6,7 +6,7 @@ branding:
 description: "Installs, starts, and stops SQLCover by GoEddie."
 inputs:
   sql-instance:
-    description: "Target SQL instance. Only used by the 'start' action."
+    description: "Target SQL instance."
     required: false
     default: "localhost"
   database:
