--- a/.github/workflows/sqlserver-unit.yml
+++ b/.github/workflows/sqlserver-unit.yml
@@ -69,16 +69,19 @@ jobs:
         with:
           install: sqlengine
           sa-password: L0wlydb4
-
-      - name: Install dbatools Module
-        run: |
-          Install-Module dbatools -Force -AllowClobber
           
-      #- name: Install and cache PowerShell modules
-      #  uses: potatoqualitee/psmodulecache@v4
-      #  with:
-      #    modules-to-cache: dbatools
-      #    shell: powershell
+      - name: Install and cache PowerShell modules
+        uses: potatoqualitee/psmodulecache@v4.5
+        with:
+          modules-to-cache: dbatools
+          shell: powershell
+      
+      - name: Install multitool
+        run: |
+          Import-Module dbatools -Verbose
+          foreach ($script in (Get-ChildItem -Path "." -Filter "sp_*.sql").Name) {
+            Invoke-DbaQuery -SqlInstance $Env:SQLINSTANCE -Database $Env:DATABASE -File $script -EnableException
+          }
 
       - name: Install tSQLt
         uses: lowlydba/tsqlt-installer@v1
@@ -87,13 +90,6 @@ jobs:
           database: ${{ env.DATABASE }}
           version: "latest"
           create: true
-
-      - name: Install multitool
-        run: |
-          Import-Module dbatools -Verbose
-          foreach ($script in (Get-ChildItem -Path "." -Filter "sp_*.sql").Name) {
-            Invoke-DbaQuery -SqlInstance $Env:SQLINSTANCE -Database $Env:DATABASE -File $script -EnableException
-          }
 
       - name: Run Pester tests with SQLCover
         uses: ./.github\actions\sqlcover
